kubernetes/apps/tier-1-infrastructure/victoria-logs/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
spec:
  hostnames:
    - vlogs.sulibot.com
  parentRefs:
    - name: gateway-internal
      namespace: network
  rules:
    - backendRefs:
        - name: victoria-logs
          port: 9428
